--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "travelling_salesman",
-            "type": "cppvsdbg",
+            "name": "main debug",
+            "type": "cppdbg",
             "request": "launch",
-            "program": "main.exe",
+            "program": "${workspaceFolder}/tmp/main",
             "args": [],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "console": "externalTerminal"
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "main debug",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
